--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,14 @@
 
 server.port=4041
 spring.application.name=BootDockerWithMysql
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/dockerdemo?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://mysqldb:3306/dockerdemo?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 # Hibernate properties
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+spring.datasource.url=jdbc:mysql://localhost:3306/dockerdemo?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
